--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-view-shot": "^3.8.0",
     "react-native-wheel-color-picker": "^1.2.0",
     "react-navigation": "^5.0.0"
   },
