--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,10 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-view-shot": "^3.8.0",
     "react-native-wheel-color-picker": "^1.2.0",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-media-library": "~15.4.1",
+    "expo-image-picker": "~14.3.2",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
