--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "react-navigation": "^5.0.0",
     "expo-media-library": "~15.4.1",
     "expo-image-picker": "~14.3.2",
+    "react-native-youtube-iframe": "^2.3.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
