--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-color-picker": "^0.6.0",
+    "react-native-dialog": "^9.3.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
