--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/slider": "^4.4.3",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/mina": "^0.2.3",
+    "@expo-google-fonts/nova-square": "^0.2.3",
+    "@expo-google-fonts/saira-semi-condensed": "0.2.3",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "~15.4.1",
     "expo-sms": "~11.4.0",
@@ -25,8 +31,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
-    "react-native-view-shot": "^3.8.0",
-    "react-native-webview": "^13.6.3",
+    "react-native-view-shot": "3.7.0",
+    "react-native-webview": "13.2.2",
     "react-native-wheel-color-picker": "^1.2.0",
     "react-native-youtube-iframe": "^2.3.0",
     "react-navigation": "^5.0.0",
