--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-view-shot": "3.7.0",
     "react-native-webview": "13.2.2",
     "react-native-wheel-color-picker": "^1.2.0",
