--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "react-native-dialog": "^9.3.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-view-shot": "3.7.0",
